force-app/main/default/objects/Reservation__c/Reservation__c.object-meta.xml
<CustomObject>
    <label>Reservation</label>
    <pluralLabel>Reservations</pluralLabel>
    <description>Customer flight reservations and bookings for tracking confirmed travel arrangements</description>
    <nameField>
        <label>Reservation Number</label>
        <type>AutoNumber</type>
        <displayFormat>R-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>