force-app/main/default/objects/Reservation__c/fields/Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date__c</fullName>
    <label>Booking Date</label>
    <description>Date and time when the reservation was created</description>
    <inlineHelpText>The date and time this reservation was booked</inlineHelpText>
    <type>DateTime</type>
    <defaultValue>NOW()</defaultValue>
</CustomField>