force-app/main/default/objects/Reservation__c/fields/Confirmation_Code__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Code__c</fullName>
    <label>Confirmation Code</label>
    <description>Unique confirmation code for the customer's reservation</description>
    <inlineHelpText>Enter the 6-character confirmation code (e.g., SW8K2M). This is what customers use to reference their booking.</inlineHelpText>
    <type>Text</type>
    <length>6</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <required>true</required>
</CustomField>