force-app/main/default/objects/Reservation__c/fields/Fare_Class__c.field-meta.xml
<CustomField>
    <fullName>Fare_Class__c</fullName>
    <label>Fare Class</label>
    <description>The fare class purchased for this reservation</description>
    <inlineHelpText>Select the fare class for this reservation</inlineHelpText>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Choice</fullName>
                <default>true</default>
                <label>Choice</label>
            </value>
            <value>
                <fullName>Choice Preferred</fullName>
            </value>
            <value>
                <fullName>Choice Extra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>