force-app/main/default/objects/Reservation__c/fields/Number_of_Passengers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Passengers__c</fullName>
    <label>Number of Passengers</label>
    <description>Total number of passengers on this reservation</description>
    <inlineHelpText>Enter the number of passengers traveling on this reservation</inlineHelpText>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <defaultValue>1</defaultValue>
</CustomField>